started and finished individual project page for mobile and desktop

--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -328,8 +328,8 @@
         text-align: center;
     }
     .progress-info-container {
-        display: flex;
-        align-items: center;
+        /* display: flex;
+        align-items: center; */
         width: 100%;
     }
     #area-title h1{ 
