--- a/mobile-friendly/mf-css/project.css
+++ b/mobile-friendly/mf-css/project.css
@@ -96,120 +96,11 @@
     }  
 
 
-/** PHONE*/
 @media only screen and (min-width: 200px) {
-    .main-wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 0em 1em;
+    .pb-wrapper {
+        margin-top: 1em;
     }
-    .overview-container {
-        display: flex;
-        justify-content: space-evenly;
-        width: 100%;
-        color: var(--text-color);
-        background-color: var(--accent-1);
-        border: 2px solid var(--accent-3);
-        border-radius: 8px;
-        margin: 1em 0;
-        cursor: pointer;
-        text-decoration: none;
-    }
-    .overview-container img {
-        width: 4em;
-        border-radius: 4px;
-        margin: 0.5em 0;
-    }
-    .overview-info {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        width: 70%;
-    }
-    .overview-title {
-        font-size: 24px;
-    }
-    .overview-summary {
-        width: 24em;
-        font-size: 12px;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
-    }
-    .overview-data {
-        display: flex;
-    }
-    .overview-wordCount, .overview-badges {
-        display: flex;
-        width: 50%;
-    }
-    .overview-wordCount > p, .overview-badges > p {
-        font-size: 16px;
-        margin-right: 0.5em;
-    }
-    .overview-container:hover .overview-title {
-        color: var(--accent-3);
-    }
-}
-
-
-
-
-@media only screen and (min-width: 720px) {
-    .overview-container{
-        width: 80%;
-    }
-    .overview-container img {
-        width: 5em;
-    }
-    .overview-summary {
-        width: 37em;
-    }
-}
-
-
-
-
-
-@media only screen and (min-width: 1000px) {
-    .overview-container img {
-        width: 7em;
-    }
-    .overview-title {
-        font-size: 28px;
-    }
-    .overview-summary {
-        width: 40em;
-        font-size: 16px;
-    }
-    .overview-wordCount > p, .overview-badges > p {
-        font-size: 20px;
-    }
-}
-
-
-
-
-@media only screen and (min-width: 1400px) {
-    .main-wrapper {
-        display: grid;
+    /* .progress-info-wrapper {
         grid-template-columns: 50% 50%;
-        row-gap: 2em;
-    }
-    .overview-container {
-        justify-self: center;
-        width: 90%;
-    }
-    .overview-container img {
-        width: 8em;
-    }
-    .main-wrapper h1 {
-        grid-column: 1/ span 2;
-        justify-self: center;
-    }
-    .overview-summary {
-        width: 27em;
-    }
+    } */
 }
-    
