--- a/mobile-friendly/mf-css/profile.css
+++ b/mobile-friendly/mf-css/profile.css
@@ -104,7 +104,10 @@
         width: fit-content;
     }
     #profilePicture {
-        width: 5em;
+        width: 4em;
+    }
+    #username {
+        font-size: 24px;
     }
     .profile-container {
         display: flex;
