--- a/mobile-friendly/mf-css/profile.css
+++ b/mobile-friendly/mf-css/profile.css
@@ -96,30 +96,47 @@
     }  
 
 @media only screen and (min-width: 200px) {
+    .profile-wrapper {
+        padding: 1.5em 1em;
+        margin-top: 1em;
+        background-color: var(--accent-1);
+        border-bottom: 2px solid var(--accent-3);
+        border-top: 2px solid var(--accent-3);
+    }
     .user-container {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        /* flex-direction: column; */
+        justify-content: space-evenly;
         align-items: center;
-        width: fit-content;
+        width: 100%;
     }
     #profilePicture {
-        width: 4em;
+        width: 6em;
     }
-    #username {
+    /* #username {
         font-size: 24px;
-    }
+    } */
     .profile-container {
         display: flex;
+        flex-direction: column;
         justify-content: space-evenly;
+        align-items: center;
     }
     .fav-container {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
+        width: 100%;
     }
     .fav-container > p {
-        font-size: 16px;
+        padding: 0.2em 0;
+    }
+    .fav-container > p, .bio-container > p {
+        font-size: 18px;
+        padding-left: 1em;
+    }
+    .fav-container, .bio-container {
+        margin-top: 1em;
     }
     /** Current Project overview*/
     .current-project-wrapper {
