--- a/mobile-friendly/mf-css/profile.css
+++ b/mobile-friendly/mf-css/profile.css
@@ -103,6 +103,13 @@
         border-bottom: 2px solid var(--accent-3);
         border-top: 2px solid var(--accent-3);
     }
+    #profileUpdate {
+        position: absolute;
+        right: 0;
+        margin-right: 1em;
+        color: var(--text-color);
+        font-size: 24px;
+    }
     .user-container {
         display: flex;
         /* flex-direction: column; */
