--- a/mobile-friendly/mf-css/profile.css
+++ b/mobile-friendly/mf-css/profile.css
@@ -114,15 +114,15 @@
         display: flex;
         /* flex-direction: column; */
         justify-content: space-evenly;
-        align-items: center;
+        align-items: end;
         width: 100%;
     }
     #profilePicture {
         width: 7em;
     }
-    /* #username {
-        font-size: 24px;
-    } */
+    #username {
+        font-size: 44px;
+    }
     .profile-container {
         display: flex;
         flex-direction: column;
