--- a/mobile-friendly/mf-css/profile.css
+++ b/mobile-friendly/mf-css/profile.css
@@ -122,6 +122,7 @@
     }
     #username {
         font-size: 44px;
+        padding-bottom: 0.2em;
     }
     .profile-container {
         display: flex;
