--- a/mobile-friendly/mf-css/profile.css
+++ b/mobile-friendly/mf-css/profile.css
@@ -112,7 +112,6 @@
     }
     .user-container {
         display: flex;
-        /* flex-direction: column; */
         justify-content: space-evenly;
         align-items: end;
         width: 100%;
@@ -150,7 +149,6 @@
     .current-project-wrapper {
         display: flex;
         justify-content: center;
-        /* align-items: center; */
     }
     .current-project-container {
         display: flex;
@@ -164,15 +162,12 @@
         text-align: center;
     }
     .progress-info-container {
-        /* display: flex;
-        align-items: center; */
         width: 100%;
     }
     #area-title h1{ 
         font-size: 36px;
     }
     #project-img {
-        /* flex-grow: 2; */
         float: left;
         margin: 0 1em 0 0;
     }
@@ -362,7 +357,9 @@
         justify-content: space-evenly;
         border: none;
         background-color: var(--background-color);
-        /* margin: 2em 0; */
+    }
+    #profileUpdate {
+        margin-right: 2em;
     }
     #profilePicture {
         width: 12em;
@@ -372,6 +369,7 @@
     }
     .user-container {
         flex-direction: column;
+        align-items: center;
         width: 40%;
         background-color: var(--accent-1);
         border: 2px solid var(--accent-3);
@@ -380,12 +378,6 @@
     .profile-container {
         width: 50%;
     }
-    /* .fav-container {
-        width: 25%;
-    }
-    .bio-container {
-        width: 25%;
-    } */
      .main-wrapper {
         display: flex;
         margin: 2em 0;
