--- a/mobile-friendly/mf-css/profile.css
+++ b/mobile-friendly/mf-css/profile.css
@@ -322,6 +322,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        height: fit-content;
     }
     .update-wrapper h1 {
         margin: 0.8em 0 0.8em 0;
@@ -363,6 +364,8 @@
         display: flex;
         justify-content: end;
         width: 100%;
+        padding: 0 1em;
+        margin: 4em 0 0 0;
     }
     #updateSubmit {
         width: 8em;
@@ -371,8 +374,10 @@
         background-color: var(--accent-3);
         border-color: transparent;
         border-radius: 16px;
-        margin: 4em 1em;
         cursor: pointer;
+    }
+    footer {
+        margin-top: 3em;
     }
 }
 
