--- a/mobile-friendly/mf-css/profile.css
+++ b/mobile-friendly/mf-css/profile.css
@@ -322,7 +322,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: fit-content;
+        height: 100%;
     }
     .update-wrapper h1 {
         margin: 0.8em 0 0.8em 0;
@@ -331,6 +331,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+        height: 100%;
         padding: 0 1em;
     }
     label {
@@ -414,7 +415,7 @@
 
     form {
         width: 60%;
-        height: 90vh;
+        /* height: 90vh; */
     }
     #user-bio {
         height: 13em;
