--- a/mobile-friendly/mf-css/profile.css
+++ b/mobile-friendly/mf-css/profile.css
@@ -199,6 +199,7 @@
         font-size: 12px;
         justify-self: center;
         text-align: center;
+        padding: 0 1em;
     }
     #badge-title {
         grid-column: span 5;
@@ -409,6 +410,9 @@
     }
     .slider-container {
         padding: 1em 1.5em 0 0;
+    }
+    #instruction {
+        font-size: 18px;
     }
 
 
