added footer to archives page

--- a/mobile-friendly/mf-css/archives.css
+++ b/mobile-friendly/mf-css/archives.css
@@ -151,6 +151,9 @@
     .overview-container:hover .overview-title {
         color: var(--accent-3);
     }
+    footer {
+        margin-top: 1em;
+    }
 }
 
 
