--- a/mobile-friendly/mf-css/archives.css
+++ b/mobile-friendly/mf-css/archives.css
@@ -98,11 +98,18 @@
 
 /** PHONE*/
 @media only screen and (min-width: 200px) {
+    .title-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
     .main-wrapper {
         display: flex;
         flex-direction: column;
         align-items: center;
         padding: 0em 1em;
+        min-height: 100vh;
     }
     .overview-container {
         display: flex;
@@ -151,6 +158,14 @@
     .overview-container:hover .overview-title {
         color: var(--accent-3);
     }
+    .instruction-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .instruction-wrapper > p {
+        font-size: 16px;
+    }
     footer {
         margin-top: 1em;
     }
@@ -168,6 +183,9 @@
     }
     .overview-summary {
         width: 37em;
+    }
+    .instruction-wrapper > p {
+        font-size: 18px;
     }
 }
 
@@ -199,6 +217,9 @@
         display: grid;
         grid-template-columns: 50% 50%;
         row-gap: 2em;
+    }
+    .instruction-wrapper {
+        grid-column: span 2;
     }
     .overview-container {
         justify-self: center;
