--- a/mobile-friendly/mf-css/profile.css
+++ b/mobile-friendly/mf-css/profile.css
@@ -323,7 +323,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 100%;
+        min-height: 90vh;
     }
     .update-wrapper h1 {
         margin: 0.8em 0 0.8em 0;
