--- a/mobile-friendly/mf-css/project.css
+++ b/mobile-friendly/mf-css/project.css
@@ -1,106 +1,28 @@
-:root,
-    :root.dark0 { /*Royal Midnight*/
-        --background-color: #1e202c;
-        --text-color: #bfc0d1;
-        --reverse-text-color: #1e202c;
-        --accent-1: #31323c;
-        --accent-2: #bfc0d1;
-        --accent-3: #60519b;
-        --filter-color: #dda7ff7e;
-        --box-shadow: 0px 0px 40px #bfc0d1;
-        --warning: #b80303;
-    }
-    :root.dark0 { /*Royal Dusk*/
-        --background-color: #31323c;
-        --text-color: #bfc0d1;
-        --reverse-text-color: #31323c;
-        --accent-1: #1e202c;
-        --accent-2: #bfc0d1;
-        --accent-3: #60519b;
-        --filter-color: #dda7ff7e;
-        --box-shadow: 0px 0px 40px #bfc0d1;
-        --warning: #b80303;
-    }
-    /* dark theme number 1 */
-    /* :root.dark1 {
-        --background-color: #24184b;
-        --text-color: #dda7ff;
-        --reverse-text-color: #24184b;
-        --accent-1: #563d76;
-        --accent-2: #fbd160;
-        --accent-3: #1b85a6;
-        --filter-color: #dda7ff7e;
-        --box-shadow: 0px 0px 15px #dda7ff7e;
-        --warning: #b80303;
-    } */
-    /*dark theme number 2 */
-    /* :root.dark2 {
-        --background-color: #2f1f45;
-        --text-color: #f9e7e7;
-        --reverse-text-color: #2f1f45;
-        --accent-1: #00416c;
-        --accent-2: #b96ac9;
-        --accent-3: #f9dbbd;
-        --filter-color: #f9e7e77e;
-        --box-shadow: 0px 0px 15px #f9e7e77e;
-        --warning: #b80303;
-    } */
-    /*dark theme number 3*/
-    /* :root.dark3 {
-        --background-color: #312257;
-        --text-color: #f9dbbd;
-        --reverse-text-color: #312257;
-        --accent-1: #502163;
-        --accent-2: #ffc680;
-        --accent-3: #3c7e85;
-        --filter-color: #f9dbbd7e;
-        --box-shadow: 0px 0px 15px #f9dbbd7e;
-        --warning: #b80303;
-    } */
-    :root.light0 {
-        --background-color: #bfc0d1;
-        --text-color: #1e202c;
-        --reverse-text-color: #bfc0d1;
-        --accent-1: #60519b;
-        --accent-2: #31323c;
-        --accent-3: #60519b;
-        --filter-color: #dda7ff7e;
-        --box-shadow: 0px 0px 15px #dda7ff7e;
-        --warning: #b80303;
-    }
-    /* light theme number 1 */
-    :root.light1{
-        --background-color: #f0d9ff;
-        --text-color: #2e1f60;
-        --reverse-text-color: #f0d9ff;
-        --accent-1: #c099d8;
-        --accent-2: #e1ba7a;
-        --accent-3: #00738a;
-        --filter-color: #2e1f607e;
-        --box-shadow: 5px 5px 12px #2e1f607e;
-        --text-shadow: 0px 0px 10px #f0d9ff;
-        --warning: #b80303;
-    }
-    /*light theme number 2 */
-    :root.light2 {
-        --background-color: #f9e7e7;
-        --text-color: #2f1f45;
-        --reverse-text-color: #f9e7e7;
-        --accent-1: #f9dbbd;
-        --accent-2: #b96ac9;
-        --accent-3: #00416c;
-        --filter-color: #2f1f457e;
-        --box-shadow: 5px 5px 12px #2e1f607e;
-        --text-shadow: 0px 0px 10px var(--accent-2);
-        --warning: #b80303;
-    }  
-
-
 @media only screen and (min-width: 200px) {
-    .pb-wrapper {
-        margin-top: 1em;
+    .archive-wrapper {
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        width: 100%;
+        height: 4em;
+        padding-right: 0.8em;
     }
-    /* .progress-info-wrapper {
-        grid-template-columns: 50% 50%;
-    } */
+    .archive-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-width: 12em;
+        height: 3em;
+        background-color: var(--accent-1);
+        border-radius: 14px;
+        padding: 0 1em;
+        cursor: pointer;
+        white-space:pre-wrap;
+    }
+    .archive-button > p {
+        font-size: 16px;
+    }
+    .archive-button:hover > p {
+        color: var(--accent-3);
+    }
 }
