--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -7,7 +7,7 @@
         --accent-2: #bfc0d1;
         --accent-3: #60519b;
         --filter-color: #dda7ff7e;
-        --box-shadow: 0px 0px 40px #bfc0d1;
+        --box-shadow: 0px 0px 15px #dda7ff7e;
         --warning: #b80303;
     }
     :root.dark0 { /*Royal Dusk*/
@@ -18,7 +18,7 @@
         --accent-2: #bfc0d1;
         --accent-3: #60519b;
         --filter-color: #dda7ff7e;
-        --box-shadow: 0px 0px 40px #bfc0d1;
+        --box-shadow: 0px 0px 15px #dda7ff7e;
         --warning: #b80303;
     }
     /* dark theme number 1 */
@@ -93,7 +93,7 @@
         --box-shadow: 5px 5px 12px #2e1f607e;
         --text-shadow: 0px 0px 10px var(--accent-2);
         --warning: #b80303;
-    }   
+    }  
 
 /* @font-face {
     font-family: Luminari;
