--- a/mobile-friendly/mf-css/login.css
+++ b/mobile-friendly/mf-css/login.css
@@ -33,7 +33,7 @@
         justify-content: center;
         gap: 0.3em;
         margin: 1em 0;
-        width: 70%;
+        width: 75%;
     }
     .input {
         width: 100%;
@@ -64,12 +64,14 @@
     }
     .forgot-password {
         display: flex;
-        flex-direction: column;
+        /* flex-direction: column; */
         width: 100%;
-        align-items: flex-start;
-        padding: 0 2em;
+        justify-content: space-evenly;
+        /* align-items: flex-start; */
+        /* padding: 0 2em; */
     }
     .forgot-password > a {
+        font-size: 14px;
         padding: 0.5em 0;
     }
 
@@ -83,16 +85,24 @@
     .input-warpper {
         display: flex;
         flex-direction: column;
-        margin-bottom: 3em;
+        margin: 2.5em 0;
     }
     .show-password-wrapper {
         display: flex;
+        flex-direction: column;
     }
-    .show-password-wrapper > p {
+    .show-password {
+        display: flex;
+    }
+    .show-password > p {
         font-size: 16px;
     }
     .terms > p {
         font-size: 16px;
+    }
+    #submit-button {
+        display: flex;
+        justify-content: flex-end;
     }
 }
 @media only screen and (min-width: 720px) {
@@ -109,9 +119,40 @@
         flex-direction: row;
         justify-content: space-evenly;
     }
+
+
+    #signup {
+        width: 50%;
+    }
 }
 @media only screen and (min-width: 1200px) {
     .login-container {
-        width: 40%;
+        width: 30%;
     }
+
+
+    .account-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        height: 90vh;
+    }
+    #signup {
+        background-color: var(--accent-1);
+        border-radius: 12px;
+        border: 2px solid var(--accent-3);
+        align-items: center;
+    }
+    .input-warpper {
+        width: 70%;
+    }
+}
+.success {
+    color: green;
+    font-size: 14px;
+}
+.error {
+    color: red;
+    font-size: 14px;
 }
