--- a/mobile-friendly/mf-css/login.css
+++ b/mobile-friendly/mf-css/login.css
@@ -107,6 +107,52 @@
         display: flex;
         justify-content: flex-end;
     }
+
+
+
+    .profile-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 1em;
+    }
+    .fav-content {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    #bio {
+        background-color: var(--background-color);
+        border: 2px solid var(--accent-3);
+        color: var(--accent-2);
+        width: 100%;
+        height: 10em;
+        padding: 8px;
+        resize: vertical;
+    }
+    .favs {
+        background-color: var(--background-color);
+        border: 2px solid var(--accent-3);
+        color: var(--accent-2);
+        width: 90%;
+        height: 2.7em;
+        margin: 0.5em 0;
+        padding: 8px;
+        resize: vertical;
+    }
+    .button-right {
+        display: flex;
+        justify-content: flex-end;
+    }
+    #profile-create-button {
+        width: 7em;
+        height: 3em;
+        font-weight: 600;
+        background-color: var(--accent-2);
+        border-color: transparent;
+        border-radius: 16px;
+        margin: 1em 1em;
+    }
 }
 @media only screen and (min-width: 720px) {
     .login-container {
