--- a/mobile-friendly/mf-css/login.css
+++ b/mobile-friendly/mf-css/login.css
@@ -129,6 +129,7 @@
         height: 10em;
         padding: 8px;
         resize: vertical;
+        margin-bottom: 2em;
     }
     .favs {
         background-color: var(--background-color);
