--- a/mobile-friendly/mf-css/login.css
+++ b/mobile-friendly/mf-css/login.css
@@ -216,13 +216,16 @@
 }
 @media only screen and (min-width: 1200px) {
     .login-container {
-        width: 30%;
+        width: 40%;
     }
     .profile-wrapper {
         width: 40%;
     }
     .profile-wrapper > h1 {
         margin-top: 1em;
+    }
+    #submit-button {
+        justify-content: center;
     }
 
 
