removed the username requirement from the password reset system

--- a/mobile-friendly/mf-css/login.css
+++ b/mobile-friendly/mf-css/login.css
@@ -197,6 +197,7 @@
     }
     .reset-content > h3 {
         text-align: center;
+        padding: 0 1em;
     }
     .forget-container {
         display: flex;
