--- a/mobile-friendly/mf-css/login.css
+++ b/mobile-friendly/mf-css/login.css
@@ -207,6 +207,20 @@
         display: flex;
         justify-content: flex-end;
     }
+
+
+
+    .success-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 3em 1em;
+    }
+    .success-container > h1, h2 {
+        text-align: center;
+        margin-bottom: 1em;
+    }
 }
 @media only screen and (min-width: 720px) {
     .login-container, .profile-wrapper, .reset-content {
@@ -241,6 +255,16 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+
+    .success-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .success-container {
+        width: 70%;
     }
 }
 @media only screen and (min-width: 1200px) {
@@ -297,6 +321,11 @@
         width: 30%;
         justify-content: center;
         align-items: end;
+    }
+
+
+    .success-container {
+        width: 50%;
     }
     
 }
