tweaking dark theme and adding purple light theme

--- a/mobile-friendly/mf-css/login.css
+++ b/mobile-friendly/mf-css/login.css
@@ -1,9 +1,9 @@
-.input {
-    background-color: var(--background-color);
-    border: 2px solid var(--accent-3);
-    color: var(--accent-2);
-}
 @media only screen and (min-width: 200px) {
+    .input {
+        background-color: var(--accent-1);
+        border: 2px solid var(--accent-3);
+        color: var(--accent-2);
+    }
     .login-wrapper {
         display: flex;
         justify-content: center;
@@ -57,6 +57,7 @@
         height: 3em;
         font-weight: 600;
         background-color: var(--accent-2);
+        color: var(--reverse-text-color);
         border-color: transparent;
         border-radius: 16px;
         margin: 1em 1em;
@@ -278,6 +279,14 @@
     }
 }
 @media only screen and (min-width: 1200px) {
+    .input {
+        background-color: var(--background-color);
+        border: 2px solid var(--accent-3);
+        color: var(--accent-2);
+    }
+
+
+
     .login-container {
         width: 40%;
     }
