--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -90,6 +90,7 @@
         width: 5em;
         height: 2.5em;
         background-color: var(--text-color);
+        color: var(--reverse-text-color);
         border: 2px solid var(--accent-2);
         border-radius: 16px;
         cursor: pointer;
@@ -511,7 +512,7 @@
     }
     .current-project-wrapper {
         width: 50%;
-        border-right: 2px solid var(--accent-3);
+        border-right: 2px solid var(--accent-1);
     }
     .current-project-container {
         margin: 0em 0.5em;
