--- a/mobile-friendly/mf-css/settings.css
+++ b/mobile-friendly/mf-css/settings.css
@@ -69,7 +69,7 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-        width: 7.5em;
+        width: 8em;
         height: 3.5em;
         background-color: var(--accent-2);
         border-radius: 24px;
@@ -87,7 +87,7 @@
         position: relative;
         justify-content: center;
         align-items: center;
-        width: 6em;
+        width: 6.5em;
         height: 2.5em;
         background-color: var(--accent-2);
         border-radius: 20px;
@@ -167,9 +167,15 @@
     #save {
         width: 5em;
         height: 2.5em;
-        background-color: var(--text-color);
-        border: 2px solid var(--accent-2);
+        /* background-color: var(--text-color);
+        color: var(--reverse-text-color);
+        border: 2px solid var(--accent-2); */
         border-radius: 16px;
+        cursor: pointer;
+        font-weight: 600;
+        background-color: var(--accent-2);
+        color: var(--reverse-text-color);
+        border-color: transparent;
         cursor: pointer;
     }
 
@@ -183,8 +189,8 @@
     .dangerZone-wrapper {
         width: 90%;
     }
-    .dangerZone-wrapper h1 {
-        font-size: 35px;
+    .dangerZone-wrapper h2 {
+        /* font-size: 35px; */
         margin-bottom: 1rem;
     }
     .delete {
