--- a/mobile-friendly/mf-css/home.css
+++ b/mobile-friendly/mf-css/home.css
@@ -205,7 +205,8 @@
     .save {
         width: 5em;
         height: 2.5em;
-        background-color: var(--text-color);
+        background-color: var(--accent-2);
+        color: var(--reverse-text-color);
         border: 2px solid var(--accent-2);
         border-radius: 16px;
         cursor: pointer;
