--- a/mobile-friendly/mf-css/login.css
+++ b/mobile-friendly/mf-css/login.css
@@ -4,6 +4,11 @@
         border: 2px solid var(--accent-3);
         color: var(--accent-2);
     }
+    .input-login {
+        background-color: var(--background-color);
+        border: 2px solid var(--accent-3);
+        color: var(--accent-2);
+    }
     .login-wrapper {
         display: flex;
         justify-content: center;
@@ -35,7 +40,7 @@
         margin: 1em 0;
         width: 75%;
     }
-    .input {
+    .input, .input-login {
         width: 100%;
         height: 2.7em;
         margin: 0.5em 0;
@@ -128,7 +133,7 @@
         align-items: center;
     }
     #bio {
-        background-color: var(--background-color);
+        background-color: var(--accent-1);
         border: 2px solid var(--accent-3);
         color: var(--accent-2);
         width: 100%;
@@ -138,7 +143,7 @@
         margin-bottom: 2em;
     }
     .favs, .reset-input {
-        background-color: var(--background-color);
+        background-color: var(--accent-1);
         border: 2px solid var(--accent-3);
         color: var(--accent-2);
         width: 90%;
@@ -156,6 +161,7 @@
         height: 3em;
         font-weight: 600;
         background-color: var(--accent-2);
+        color: var(--reverse-text-color);
         border-color: transparent;
         border-radius: 16px;
         margin: 1em 1em;
@@ -240,7 +246,7 @@
     /* .profile-wrapper {
         width: 70%;
     } */
-    .input {
+    .input, .input-login {
         height: 3.5em;
     }
     label {
@@ -279,7 +285,7 @@
     }
 }
 @media only screen and (min-width: 1200px) {
-    .input {
+    .input, .input-login, #bio, .favs, .reset-input {
         background-color: var(--background-color);
         border: 2px solid var(--accent-3);
         color: var(--accent-2);
