--- a/mobile-friendly/mf-css/newProject.css
+++ b/mobile-friendly/mf-css/newProject.css
@@ -124,7 +124,8 @@
         width: 8em;
         height: 3em;
         font-weight: 600;
-        background-color: var(--accent-3);
+        background-color: var(--accent-2);
+        color: var(--reverse-text-color);
         border-color: transparent;
         border-radius: 16px;
         margin: 1em 1em;
