--- a/mobile-friendly/mf-css/profile.css
+++ b/mobile-friendly/mf-css/profile.css
@@ -276,7 +276,8 @@
         width: 8em;
         height: 3em;
         font-weight: 600;
-        background-color: var(--accent-3);
+        background-color: var(--accent-2);
+        color: var(--reverse-text-color);
         border-color: transparent;
         border-radius: 16px;
         cursor: pointer;
