--- a/mobile-friendly/mf-css/progressBar.css
+++ b/mobile-friendly/mf-css/progressBar.css
@@ -22,7 +22,7 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        background-color: var(--accent-3);
+        background-color: var(--progress-bar);
         width: 95%;
         height: 37px;
         border: 2px solid var(--accent-2);
@@ -33,9 +33,10 @@
     .percentage {
         display: flex;
         width: 20%;
-        height: 35px;
-        background-color: var(--accent-2);
-        border-radius: 14px 0px 0px 14px;
+        height: 32px;
+        background-color: var(--percentage);
+        border-radius: 15px 0px 0px 15px;
+        /* padding-left: 5px; */
     }
     .progress-info-wrapper {
         display: grid;
