--- a/mobile-friendly/mf-css/settings.css
+++ b/mobile-friendly/mf-css/settings.css
@@ -102,8 +102,8 @@
         translate: 0 2em;
         top: 0;
         z-index: 1;
-        width: 7em;
-        background-color: var(--accent-1);
+        width: 9.5em;
+        background-color: var(--background-color);
         border: 2px solid var(--accent-3);
         border-radius: 16px;
         margin-top: 0.3em;
@@ -119,6 +119,10 @@
         justify-content: center;
         width: 100%;
         min-height: 1.8em;
+        border-bottom: 2px solid var(--accent-3);
+    }
+    .setTheme:last-child {
+        border: none;
     }
     .setTheme:hover {
         background-color: var(--accent-3);
