--- a/mobile-friendly/mf-css/style.css
+++ b/mobile-friendly/mf-css/style.css
@@ -10,6 +10,8 @@
         --filter-color: #dda7ff7e;
         --box-shadow: 0px 0px 15px #dda7ff7e;
         --warning: #b80303;
+        --progress-bar: #60519b;
+        --percentage: #bfc0d1;
     }
     
     :root.light1 {
@@ -22,6 +24,8 @@
         --filter-color: #dda7ff7e;
         --box-shadow: 0px 0px 15px #dda7ff7e;
         --warning: #b80303;
+        --progress-bar: #31323c;
+        --percentage: #60519b;
     }
      
 
