--- a/mobile-friendly/mf-css/progressBar.css
+++ b/mobile-friendly/mf-css/progressBar.css
@@ -25,18 +25,28 @@
         background-color: var(--progress-bar);
         width: 95%;
         height: 37px;
+        border-radius: 16px;
+        margin-bottom: 0.8em;
+        z-index: 0;
+        position: relative;
+    }
+    .border {
+        width: 100%;
+        height: 100%;
         border: 2px solid var(--accent-2);
         border-radius: 16px;
         box-shadow: var(--box-shadow);
-        margin-bottom: 0.8em;
+        z-index: 2;
+        position: absolute;
     }
     .percentage {
         display: flex;
         width: 20%;
-        height: 32px;
+        height: 34px;
         background-color: var(--percentage);
-        border-radius: 15px 0px 0px 15px;
+        border-radius: 14px 0px 0px 14px;
         /* padding-left: 5px; */
+        z-index: 1;
     }
     .progress-info-wrapper {
         display: grid;
