--- a/mobile-friendly/mf-css/contact.css
+++ b/mobile-friendly/mf-css/contact.css
@@ -1,5 +1,31 @@
 @media only screen and (min-width: 200px) {
-
+    .contact-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    form {
+        width: 80%;
+    }
+    .user-wrapper {
+        display: flex;
+        flex-direction: column;
+        width: 60%;
+    }
+    .message-wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+    #message {
+        background-color: var(--accent-1);
+        border: 2px solid var(--accent-3);
+        color: var(--accent-2);
+        width: 100%;
+        height: 10em;
+        padding: 8px;
+        resize: vertical;
+        margin-bottom: 2em;
+    }
 }
 
 
