--- a/mobile-friendly/mf-css/contact.css
+++ b/mobile-friendly/mf-css/contact.css
@@ -7,10 +7,20 @@
     form {
         width: 80%;
     }
+    .input {
+        background-color: var(--accent-1);
+        border: 2px solid var(--accent-3);
+        color: var(--accent-2);
+        width: 90%;
+        height: 2.7em;
+        margin: 0.5em 0;
+        padding: 8px;
+    }
     .user-wrapper {
         display: flex;
         flex-direction: column;
-        width: 60%;
+        width: 80%;
+        margin: 2em 0;
     }
     .message-wrapper {
         display: flex;
@@ -21,10 +31,25 @@
         border: 2px solid var(--accent-3);
         color: var(--accent-2);
         width: 100%;
-        height: 10em;
+        height: 13em;
         padding: 8px;
         resize: vertical;
         margin-bottom: 2em;
+    }
+    .contact-button {
+        display: flex;
+        justify-content: flex-end;
+        margin-bottom: 2em;
+    }
+    #submit {
+        width: 6em;
+        height: 3em;
+        font-weight: 600;
+        background-color: var(--accent-2);
+        color: var(--reverse-text-color);
+        border-color: transparent;
+        border-radius: 16px;
+        margin: 1em 1em;
     }
 }
 
