--- a/mobile-friendly/mf-css/contact.css
+++ b/mobile-friendly/mf-css/contact.css
@@ -57,12 +57,31 @@
 
 
 @media only screen and (min-width: 720px) {
-
+    .contact-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .contact-content {
+        width: 80%;
+    }
 }
 
 
 
 
 @media only screen and (min-width: 1024px) {
-    
+    .content-wrapper {
+        display: flex;
+        margin: 3em 0;
+    }
+    .user-wrapper {
+        width: 40%;
+    }
+    .message-wrapper {
+        width: 60%;
+    }
+    #message {
+        height: 26em;
+    }
 }
