--- a/mf-css/home.css
+++ b/mf-css/home.css
@@ -69,6 +69,7 @@
     .project-stats {
         display: flex;
         justify-content: space-between;
+        padding-right: 8px;
     }
     #popup-project-title {
         width: 16em;
