--- a/mf-css/home.css
+++ b/mf-css/home.css
@@ -44,7 +44,7 @@
         background-color: var(--accent-1);
         border: 2px solid var(--accent-3);
         border-radius: 16px;
-        padding: 1em 1em 0 1em;
+        padding: 1em;
         margin-top: 6em;
     }
     .project-select-content {
