--- a/mf-css/home.css
+++ b/mf-css/home.css
@@ -499,7 +499,7 @@
     }
     .project-select-popup {
         width: 60%;
-        padding-left: 1em;
+        /* padding-left: 1em; */
     }
     .popup-image {
         margin-right: 1em;
@@ -545,7 +545,7 @@
     }
     .project-select-popup {
         width: 50%;
-        padding-left: 1em;
+        /* padding-left: 1em; */
     }
     #popup-project-title {
         width: 21em;
@@ -603,7 +603,7 @@
     }
     .project-select-popup {
         width: 40%;
-        padding: 1.5em 0 0 1.5em;
+        padding: 1.5em;
         margin-top: 8em;
     }
     #popup-project-title {
