change project select div back to anchor tag and added form button with value of project id to hopefully send to php process page as post request

--- a/mf-css/home.css
+++ b/mf-css/home.css
@@ -52,6 +52,7 @@
         align-items: center;
         height: 6em;
         cursor: pointer;
+        text-decoration: none;
     }
     .project-select-content:hover #popup-project-title {
         color: var(--accent-3);
