change class back to inactive and set inactive class to opacity 0

--- a/css/style.css
+++ b/css/style.css
@@ -606,9 +606,12 @@ a {
 .showFlex {
     display: flex;
 }
-.hide, .inactive {
+.hide {
     display: none;
 }
 #about-icon {
     color: var(--text-color);
+}
+.inactive {
+    opacity: 0;
 }
