added html and css to login page to announce the website is down for maintenance

--- a/css/style.css
+++ b/css/style.css
@@ -372,7 +372,20 @@ a {
     .button-container > p {
         font-size: 18px;
     }
+    .announce-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .announce-wrapper > h1, h3 {
+        text-align: center;
+    }
+    .announce-wrapper > h1 {
+        color: var(--warning);
+    }
 }
+
 
 
 
